--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color: blue;">
+<body style="background-color: grey;">
 <center>
 <h1 style="color: white;">Coming Soon!</h1>
 </center>
