--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
       <!-- resizing screen for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!--importing css to html-->
-      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.1/bootstrap-material-design.css">
+      <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.1/bootstrap-material-design.css">
       <link rel="stylesheet" type="text/css" href="index.css">
       
       <title>3dankmemes</title>
@@ -12,7 +12,7 @@
     </head>
     <body>
       <!-- javascript -->
-      <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+      <script type="text/javascript" src="//code.jquery.com/jquery-3.1.0.min.js"></script>
       <script type="text/javascript" src="index.js"></script>
     </body>
   </html>
